Fix node detail overflow

--- a/wiki/src/styles/App.scss
+++ b/wiki/src/styles/App.scss
@@ -39,3 +39,8 @@ pre {
     -webkit-user-select: none; /* Chrome, Safari, and Opera */
     -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
 }
+
+.node-details {
+    overflow-y: auto;
+    height: calc(100vh - 100px);
+}
